--- a/lib_audio/build.gradle
+++ b/lib_audio/build.gradle
@@ -6,14 +6,14 @@ def pomVersionName = '1.0.0-SNAPSHOT'
 def pomDescription = 'the audio library for all projects'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion this.rootProject.android.compileSdkVersion
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion this.rootProject.android.minSdkVersion
+        targetSdkVersion this.rootProject.android.targetSdkVersion
+        versionCode this.rootProject.android.versionCode
+        versionName this.rootProject.android.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation this.rootProject.depsLibs.appcompat
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
