--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 apply from: file('imooc.gradle')
 
 buildscript {
+    ext.kotlin_version = '1.3.50'
+
     repositories {
         google()
         jcenter()
         mavenCentral()
         maven {
-            url 'http://localhost:8081/#admin/repository/repositories:imooc_releases'
+            url 'http://localhost:8081/#admin/repository/repositories:imooc-releases'
             credentials {
                 username 'admin'
                 password 'admin123'
@@ -26,6 +28,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -35,7 +38,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven {
-            url 'http://localhost:8081/#admin/repository/repositories:imooc_releases'
+            url 'http://localhost:8081/#admin/repository/repositories:imooc-releases'
             credentials {
                 username 'admin'
                 password 'admin123'
@@ -47,6 +50,9 @@ allprojects {
                 username 'admin'
                 password 'admin123'
             }
+        }
+        maven {
+            url "https://jitpack.io"
         }
     }
 }
