--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
-#android.useAndroidX=true
+android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
-#android.enableJetifier=true
+android.enableJetifier=true
 NEXUS_REPOSITORY_URL=http://localhost:8081/#admin/repository/repositories:imooc-snapshots
 POM_GROUPID=com.imooc.android
 POM_PACKAGING=aar
