--- a/imooc.gradle
+++ b/imooc.gradle
@@ -12,12 +12,16 @@ ext {
             appcompat     : '1.2.0',
             magicindicator: '1.7.0',
             glide          : '4.9.0',
-            glidecompiler  : '4.9.0'
+            glidecompiler  : '4.9.0',
+            rxjava         : '2.2.9',
+            rxandroid      : '2.1.1'
     ]
     depsLibs = [
             appcompat     : "androidx.appcompat:appcompat:${depsVersion.appcompat}",
             magicindicator: "com.github.hackware1993:MagicIndicator:${depsVersion.magicindicator}",
             glide          : "com.github.bumptech.glide:glide:${depsVersion.glide}",
-            glidecompiler  : "com.github.bumptech.glide:compiler:${depsVersion.glidecompiler}"
+            glidecompiler  : "com.github.bumptech.glide:compiler:${depsVersion.glidecompiler}",
+            rxjava         : "io.reactivex.rxjava2:rxjava:${depsVersion.rxjava}",
+            rxandroid      : "io.reactivex.rxjava2:rxandroid:${depsVersion.rxandroid}"
     ]
 }
