--- a/lib_image_loader/build.gradle
+++ b/lib_image_loader/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     //glide相关依赖
     implementation rootProject.depsLibs.glide
     annotationProcessor rootProject.depsLibs.glidecompiler
+    //占位主工程rxjava
+    compileOnly rootProject.depsLibs.rxjava
+    compileOnly rootProject.depsLibs.rxandroid
 }
