--- a/imooc_voice/build.gradle
+++ b/imooc_voice/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation this.rootProject.depsLibs.appcompat
     implementation 'com.google.android.material:material:1.2.1'
     implementation project(path: ':lib_common_ui')
+    implementation project(path: ':lib_network')
+    implementation project(path: ':lib_image_loader')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
