--- a/imooc_voice/src/main/AndroidManifest.xml
+++ b/imooc_voice/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.geng.imooc_voice.view.login.LoginActivity"/>
     </application>
 
 </manifest>
