--- a/imooc.gradle
+++ b/imooc.gradle
@@ -14,7 +14,8 @@ ext {
             glide          : '4.9.0',
             glidecompiler  : '4.9.0',
             rxjava         : '2.2.9',
-            rxandroid      : '2.1.1'
+            rxandroid      : '2.1.1',
+            eventbus       : '3.1.1'
     ]
     depsLibs = [
             appcompat     : "androidx.appcompat:appcompat:${depsVersion.appcompat}",
@@ -22,6 +23,7 @@ ext {
             glide          : "com.github.bumptech.glide:glide:${depsVersion.glide}",
             glidecompiler  : "com.github.bumptech.glide:compiler:${depsVersion.glidecompiler}",
             rxjava         : "io.reactivex.rxjava2:rxjava:${depsVersion.rxjava}",
-            rxandroid      : "io.reactivex.rxjava2:rxandroid:${depsVersion.rxandroid}"
+            rxandroid      : "io.reactivex.rxjava2:rxandroid:${depsVersion.rxandroid}",
+            eventbus       : "org.greenrobot:eventbus:${depsVersion.eventbus}"
     ]
 }
