--- a/imooc_voice/build.gradle
+++ b/imooc_voice/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation this.rootProject.depsLibs.magicindicator
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    //eventbus类库依赖
+    implementation rootProject.depsLibs.eventbus
 }
