--- a/lib_audio/build.gradle
+++ b/lib_audio/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 def pomName = this.getName()
 def pomVersionName = '1.0.0-SNAPSHOT'
@@ -32,12 +33,32 @@ android {
 }
 
 dependencies {
-    implementation this.rootProject.depsLibs.appcompat
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //占位主工程android原生库
+    compileOnly rootProject.depsLibs.appcompact
+    compileOnly rootProject.depsLibs.design
+    compileOnly rootProject.depsLibs.recyclerview
+
+    //占位主工程的greenDao类库
+    compileOnly rootProject.depsLibs.greendao
+    //占位主工程的eventbus库
+    compileOnly rootProject.depsLibs.eventbus
+    //占位主工程的rxjava库
+    compileOnly rootProject.depsLibs.rxjava
+    //占位主工程自己源码库
+    compileOnly project(':lib_image_loader')
+    compileOnly project(':lib_common_ui')
 }
+
+greendao {
+    //其它配置保持默认,有需要再研究
+    schemaVersion 1 //数据库版本号
+    daoPackage 'com.geng.lib_audio.mediaplayer.db' //dao,master类所在包
+}
+
 
 uploadArchives {
     repositories {
