--- a/lib_common_ui/build.gradle
+++ b/lib_common_ui/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    implementation this.rootProject.depsLibs.appcompat
+    implementation this.rootProject.depsLibs.appcompact
     implementation 'com.google.android.material:material:1.2.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
