--- a/imooc_voice/build.gradle
+++ b/imooc_voice/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation project(path: ':lib_common_ui')
     implementation project(path: ':lib_network')
     implementation project(path: ':lib_image_loader')
+    implementation project(path: ':lib_audio')
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
