--- a/lib_common_ui/build.gradle
+++ b/lib_common_ui/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation this.rootProject.depsLibs.appcompact
     implementation 'com.google.android.material:material:1.2.1'
+    implementation project(path: ':lib_image_loader')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
